tests/typechecking/valid/function4.ml
let rec addition x y  = x + y in addition (3+2) (1+4)