tests/typechecking/invalid/fun2.ml
let rec sum x y = x + y in 
print_int (sum true 2)